--- a/data_EDA_from_czx.ipynb
+++ b/data_EDA_from_czx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "4     0       0       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "max        1.000000      1.000000      1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 14243 entries, 4 to 69999\n",
+      "Data columns (total 14 columns):\n",
+      "id             14243 non-null int64\n",
+      "age            14243 non-null int64\n",
+      "gender         14243 non-null int64\n",
+      "height         14243 non-null int64\n",
+      "weight         14243 non-null float64\n",
+      "ap_hi          14243 non-null int64\n",
+      "ap_lo          14243 non-null int64\n",
+      "cholesterol    14243 non-null int64\n",
+      "gluc           14243 non-null int64\n",
+      "smoke          14243 non-null int64\n",
+      "alco           14243 non-null int64\n",
+      "active         14243 non-null int64\n",
+      "cardio         14243 non-null int64\n",
+      "weight_cat     14243 non-null float64\n",
+      "dtypes: float64(2), int64(12)\n",
+      "memory usage: 1.6 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_set_hash, test_set_hash = split_train_test_by_id(cardio_dataset, 0.2, \"id\")\n",
+    "test_set_hash.info() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -661,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +770,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 56000 entries, 38685 to 54292\n",
+      "Int64Index: 56000 entries, 8230 to 45065\n",
       "Data columns (total 14 columns):\n",
       "id             56000 non-null int64\n",
       "age            56000 non-null int64\n",
@@ -759,7 +795,7 @@
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "split = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
-    "for train_index, test_index in split.split(cardio_dataset, cardio_dataset[\"weight_cat\"]):\n",
+    "for train_index, test_index in split.split(cardio_dataset, cardio_dataset[\"smoke\"]):\n",
     "    cardio_train_set = cardio_dataset.loc[train_index] \n",
     "    cardio_test_set = cardio_dataset.loc[test_index]\n",
     "\n",
@@ -768,6 +804,32 @@
     "\n",
     "# 查看\"weight_cat\"的每一类的占比\n",
     "# cardio_dataset[\"weight_cat\"].value_counts()/len(cardio_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "proportion in test set:\n",
+      " 0    0.911857\n",
+      "1    0.088143\n",
+      "Name: smoke, dtype: float64 \n",
+      "\n",
+      "proportion in whole dataset:\n",
+      " 0    0.911871\n",
+      "1    0.088129\n",
+      "Name: smoke, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"proportion in test set:\\n\",cardio_test_set['smoke'].value_counts()/len(cardio_test_set),\"\\n\")\n",
+    "print(\"proportion in whole dataset:\\n\",cardio_dataset['smoke'].value_counts()/len(cardio_dataset))"
    ]
   },
   {
